--- a/src/app/pages/courses/courses.component.html
+++ b/src/app/pages/courses/courses.component.html
@@ -2,6 +2,10 @@
   <app-toolbar-title title="Cursos" icon="fa-certificate">
   </app-toolbar-title>
 
+  <p class="description">
+    Aqui estão meus certificados adquiridos em cursos.
+  </p>
+
   <div fxLayout="row wrap" fxLayoutGap="20px grid">
     <div fxFlex="25" fxFlex.xs="100" fxFlex.sm="50" fxFlex.md="33" fxFlex.lg="25">
       <mat-card class="mat-elevation-z4 fixed-card">
