--- a/src/app/pages/support/support.component.html
+++ b/src/app/pages/support/support.component.html
@@ -1,6 +1,13 @@
 <div class="content mat-elevation-z4">
   <app-toolbar-title title="Projetos" icon="fa-diagram-project">
   </app-toolbar-title>
+
+  <p class="description">
+    Aqui estão alguns dos meus projetos desenvolvidos com Angular e NextJS.
+    Todos os códigos estão disponíveis no meu repositório GitHub.
+  </p>
+
+
   <div fxLayout="row wrap" fxLayoutGap="20px grid" class="contact-list" fxLayoutAlign="center start">
     <div fxFlex="25" fxFlex.xs="100" fxFlex.sm="50" fxFlex.md="25" fxFlex.lg="30">
       <mat-card class="contact-item">
@@ -75,6 +82,13 @@
       </mat-card>
     </div>
 
+    <div fxLayout="row" fxLayoutAlign="center">
+      <button mat-raised-button color="primary">
+        <a href="https://github.com/DaniloFrancisquete" target="_blank" style="text-decoration: none; color: white;">
+          Ver repositório no GitHub
+        </a>
+      </button>
+    </div>
 
 
   </div>
