--- a/src/app/pages/teachers/teachers.component.scss
+++ b/src/app/pages/teachers/teachers.component.scss
@@ -17,7 +17,8 @@ mat-card-content {
 }
 
 mat-expansion-panel-header {
-  background-color: #3f51b5;
+  background-color:#b4c0ff;
+  ;
   gap: 10px;
 }
 
