--- a/src/app/pages/users/my-disciplines/my-disciplines.component.html
+++ b/src/app/pages/users/my-disciplines/my-disciplines.component.html
@@ -1,1 +1,43 @@
-<p>my-disciplines works!</p>
+<mat-card class="cover-card">
+  <mat-card-content>
+    <p>Prezados recrutadores,</p>
+
+    <p>
+      Sou um  Desenvolvedor Web  com grande entusiasmo. Com uma sólida
+      formação em desenvolvimento de software e experiência prática em
+      projetos envolvendo <strong>Angular</strong>, <strong>React</strong> e
+      <strong>Next.js</strong>, acredito que posso agregar valor à sua equipe,
+      ajudando a criar soluções web inovadoras e funcionais que atendam às
+      necessidades do mercado.
+    </p>
+
+    <p>
+      Ao longo da minha carreira, trabalhei em diversos projetos no setor
+      financeiro, o que me proporcionou uma visão apurada de como integrar
+      tecnologia de ponta com eficiência operacional. Além de desenvolver
+      interfaces responsivas e formular soluções em tempo real, também sou
+      experiente em implementar metodologias ágeis e boas práticas de
+      programação para garantir entregas de alta qualidade.
+    </p>
+
+    <p>
+      Minha atuação anterior envolveu o desenvolvimento de sistemas de gestão
+      completos para pequenos lojistas e a criação de aplicações front-end
+      robustas e otimizadas para a experiência do usuário. Também tenho forte
+      conhecimento em <strong>autenticação via JWT</strong>,
+      <strong>integração com APIs RESTful</strong>, e utilizo
+      <strong>Angular Material</strong> para construir layouts avançados,
+      modernos e acessíveis.
+    </p>
+
+    <p>
+      Estou certo de que minha paixão por tecnologia, habilidades técnicas e
+      foco em resultados fazem de mim um candidato ideal.
+    </p>
+  </mat-card-content>
+
+  <mat-card-actions>
+    <a mat-raised-button color="primary" href="https://drive.google.com/file/d/1sHuD9I77X_6bJtJt-8gMSdFPIcN-7RWs/view?usp=drive_link" target="_blank">Download PDF</a>
+    <a mat-raised-button color="accent" href="mailto:danilofrancisquete@hotmail.com">Enviar por Email</a>
+  </mat-card-actions>
+</mat-card>
