--- a/src/app/pages/users/my-profile/my-profile.component.html
+++ b/src/app/pages/users/my-profile/my-profile.component.html
@@ -1,1 +1,51 @@
-<p>my-profile works!</p>
+
+<mat-card class="profile-card">
+  <mat-card-header>
+    <div mat-card-avatar class="profile-avatar"></div>
+    <mat-card-title>Danilo Francisquete</mat-card-title>
+    <mat-card-subtitle>Desenvolvedor Full Stack</mat-card-subtitle>
+  </mat-card-header>
+  <br>
+  <mat-card-content>
+    <p>
+      <strong>Desenvolvedor Full Stack | Especialista em Angular, React e
+        Next.js | Focado em Soluções Inovadoras para o Setor Financeiro</strong>
+    </p>
+
+    <mat-divider></mat-divider>
+    <br>
+    <p>
+      Sou um desenvolvedor full stack com ampla experiência em tecnologias como
+      <strong>Angular</strong>, <strong>React</strong> e <strong>Next.js</strong>, com foco na criação de interfaces dinâmicas, intuitivas e de alta performance. Ao longo da minha carreira, tenho contribuído para o desenvolvimento de soluções inovadoras no mercado financeiro, criando desde aplicações web responsivas até sistemas robustos para controle e gestão de operações.
+    </p>
+
+    <p>
+      Com sólida experiência em <strong>integração de APIs RESTful</strong>,
+      <strong>autenticação JWT</strong>, e o uso extensivo de <strong>Angular
+        Material</strong>, sou capaz de transformar necessidades de negócio em
+      soluções eficientes e escaláveis. Além disso, aplico metodologias ágeis
+      como Scrum e Lean Six Sigma para garantir entregas otimizadas e voltadas
+      para resultados.
+    </p>
+
+    <p>
+      Minha trajetória inclui o desenvolvimento de projetos para a melhoria de processos operacionais, com ênfase na criação de interfaces modernas e eficientes para empresas financeiras e pequenas lojas. Tenho facilidade em trabalhar em equipe e colaborar em projetos que exigem adaptação rápida e resolução de problemas complexos.
+    </p>
+
+    <mat-divider></mat-divider>
+    <br>
+
+    <p><strong>Principais Competências:</strong></p>
+    <ul>
+      <li>Desenvolvimento Front-end: <strong>Angular, React, Next.js</strong></li>
+      <li>Desenvolvimento Back-end: <strong>Node.js, Express, API REST</strong></li>
+      <li>Integração de APIs, Autenticação via <strong>JWT</strong></li>
+      <li>Implementação de <strong>CRUD</strong> e sistemas de controle de estoque/vendas</li>
+      <li>Utilização de <strong>Angular Material</strong> para interfaces modernas e acessíveis</li>
+      <li>Conhecimento em <strong>Metodologias Ágeis</strong> e <strong>Lean Six Sigma</strong></li>
+    </ul>
+  </mat-card-content>
+
+
+</mat-card>
+
