--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,3 +10,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   margin: -30px 34px 35px;
   background-color: white;
 }
+
+.mat-icon {
+  color: #3f51b5 !important;
+}
