--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -46,23 +46,50 @@ justify-content: center;
   color: #777;
 }
 
+.skills-icons {
+  display: flex;
+  justify-content: center;
+  gap: 15px;
+  margin: 20px 0;
+}
+
+.skills-icons img {
+  transition: filter 0.3s ease;
+}
+
+.skills-icons img:hover {
+  filter: none;
+}
+
+.skills-title {
+  margin: 20px 0 10px;
+  font-size: 1.5rem;
+}
+
+.mat-mdc-card {
+  gap: 10px !important;
+}
 .contact-container {
   display: flex;
   justify-content: center;
   gap: 20px;
   margin: 20px 0;
+  flex-wrap: wrap; /* Permite que os cards se ajustem em telas pequenas */
 }
 
 .contact-card {
-  flex: 1;
-  margin: 0 10px;
+  flex: 1 1 45%; /* Define uma largura flexível de 45% */
+  min-width: 250px; /* Garante que os cards não fiquem menores que 250px */
+  margin: 10px;
   border-radius: 12px;
   background-color: #fff;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   transition: transform 0.3s ease-in-out;
   cursor: pointer;
-  padding: 15px;
+  display: flex;
   align-items: center;
+  justify-content: center;
+  padding: 15px;
 }
 
 .contact-card:hover {
@@ -73,6 +100,7 @@ justify-content: center;
   display: flex;
   align-items: center;
   gap: 10px;
+  flex-direction: row;
 }
 
 .contact-link {
@@ -92,28 +120,15 @@ justify-content: center;
   color: #666;
 }
 
+@media (max-width: 600px) {
+  .contact-container {
+    flex-direction: column; /* Coloca os cards um abaixo do outro em telas pequenas */
+    gap: 10px;
+  }
 
-.skills-icons {
-  display: flex;
-  justify-content: center;
-  gap: 15px;
-  margin: 20px 0;
-}
-
-.skills-icons img {
-  transition: filter 0.3s ease;
-}
-
-.skills-icons img:hover {
-  filter: none; /* Retorna à cor original ao passar o mouse */
-}
-
-.skills-title {
-  margin: 20px 0 10px;
-  font-size: 1.5rem;
-}
-
-.mat-mdc-card {
-  gap: 10px !important;
+  .contact-card {
+    flex-basis: 100%; /* Ocupa toda a largura da tela */
+    min-width: 100%; /* Garante que os cards tenham a mesma largura */
+  }
 }
 
