--- a/src/app/pages/support/support.component.scss
+++ b/src/app/pages/support/support.component.scss
@@ -48,7 +48,7 @@
 }
 
 .mat-card {
-  height: 100%; /* Garante que todos os cards tenham a mesma altura */
+  height: 100%;
 }
 
 .title, .subtitle {
@@ -56,6 +56,24 @@
 }
 
 .contact-item:hover {
-  transform: translateY(-10px); /* Move o card ligeiramente para cima */
-  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.3); /* Aumenta a sombra para criar o efeito de profundidade */
+  transform: translateY(-10px);
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.3);
+}
+
+.description {
+  font-size: 18px;
+  color: #333;
+  text-align: center;
+  margin: 20px 0;
+  line-height: 1.6;
+}
+
+button a {
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
+}
+
+button {
+  margin-top: 20px;
 }
