--- a/src/app/pages/users/users.component.scss
+++ b/src/app/pages/users/users.component.scss
@@ -1,30 +1,39 @@
-.tabs {
-  margin-top: 1em;
+/* Estilo para o contêiner da barra de navegação */
+.tab-nav-bar {
+  display: flex;
+  width: 100%;
 }
 
-.tabs a {
-  font-size: 16px
+/* Estilo para os links de navegação */
+.tab-nav-bar a {
+  flex: 1; /* Faz com que cada link ocupe uma parte igual da largura disponível */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 16px; /* Ajuste o padding para aumentar o tamanho do botão */
+  text-align: center;
+  border: 1px solid #ccc; /* Adiciona uma borda para visualização */
+  border-radius: 8px; /* Borda arredondada */
+  margin: 4px; /* Margem entre os botões */
+  text-decoration: none; /* Remove o sublinhado */
+  color: inherit; /* Herda a cor do texto */
+  box-sizing: border-box; /* Inclui padding e border no cálculo da largura total */
 }
 
-.mat-focus-indicator {
-  color: black;
+/* Estilo para os ícones dentro dos links de navegação */
+.tab-nav-bar a mat-icon {
+  margin-right: 8px;
 }
 
-.active-link {
-  background-color: #e6e6e6;
-  color: black;
-  border-top-right-radius: 5px;
-  border-top-left-radius: 5px;
-  border: 1px solid #0000001f;
-  border-bottom: 0px;
+/* Estilo para o link ativo */
+.tab-nav-bar a.active-link {
+  background-color: #e0e0e0; /* Cor de fundo para o link ativo */
+  color: #000; /* Cor do texto para o link ativo */
+  font-weight: bold; /* Negrito para o texto ativo */
 }
 
-mat-icon {
-  margin-right: 5px;
-}
-
-.container {
-  padding: 15px;
-  border: 1px solid #0000001f;
-  border-top: 0;
+/* Adiciona um efeito de hover */
+.tab-nav-bar a:hover {
+  background-color: #f5f5f5; /* Cor de fundo ao passar o mouse */
+  text-decoration: none; /* Remove o sublinhado ao passar o mouse */
 }
