--- a/src/app/shared/components/toolbar-menu/toolbar-menu.component.html
+++ b/src/app/shared/components/toolbar-menu/toolbar-menu.component.html
@@ -1,14 +1,14 @@
 <mat-toolbar class="toolbar-menu"[class.mat-elevation-z4]="shadow">
   <mat-toolbar-row>
     <a href="/dashboard" mat-button class="logo">
-    <mat-icon fontSet="fa" fontIcon="fa-school"></mat-icon>
+    <mat-icon  fontSet="fa" fontIcon="fa-school"></mat-icon>
     <span class="title" *ngIf="!popText">Portfólio</span>
     <span class="title" *ngIf="popText">Portfólio - {{menuTitle}}</span>
   </a>
   <div class="content-center">
     <button mat-button [matMenuTriggerFor]="beforeMenu">
       <span>Menu</span>
-      <mat-icon>more_vert</mat-icon>
+      <mat-icon class="iconmore">more_vert</mat-icon>
     </button>
     <mat-menu #beforeMenu="matMenu">
       <a *ngFor="let item of items_menu" mat-menu-item [routerLink]="item.link" routerLinkActive="active">
