--- a/src/app/shared/components/toolbar-menu/toolbar-menu.component.scss
+++ b/src/app/shared/components/toolbar-menu/toolbar-menu.component.scss
@@ -1,22 +1,27 @@
 .logo {
   .mat-icon {
     font-size: 18px;
+    color: white !important;
   }
 }
 
 .title {
   font-size: 20px;
   margin-top: 10px !important;
+
 }
 
 .mat-menu-item {
   .mat-icon {
     margin-top: 5px;
     font-size: 18px;
+
   }
 }
 
-
+.iconmore {
+  color: white !important;
+}
 
 
 .toolbar-menu {
@@ -39,3 +44,4 @@
 .space-right-icon {
   margin-right: 10px;
 }
+
