--- a/src/app/shared/components/toolbar-title/toolbar-title.component.scss
+++ b/src/app/shared/components/toolbar-title/toolbar-title.component.scss
@@ -5,6 +5,7 @@
 .icon-space-mat {
   font-size: 20px;
   margin: 5px 5px 0 0;
+  color:#3f51b5 !important;
 }
 
 mat-toolbar {
@@ -16,4 +17,7 @@ mat-toolbar {
  border-bottom: 1px solid #efefef;
   height: 45px;
   padding: 10px 10px 18px;
+  margin-bottom: 20px;
 }
+
+
