--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -57,7 +57,7 @@
         <mat-card-header>
           <mat-card-title>Sobre este Portfólio</mat-card-title>
         </mat-card-header>
-        <mat-card-content>
+        <mat-card-content class="text2">
           <p>
             Este portfólio foi desenvolvido utilizando Angular e Angular Material. Nele, você encontrará uma organização clara dos componentes, utilizando os módulos Angular de forma eficaz e seguindo práticas modernas de desenvolvimento.
           </p>
