--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -33,6 +33,7 @@ justify-content: center;
   font-weight: bold;
   color: #3f51b5;
   text-align: center;
+  margin-bottom: 10px;
 }
 
 .subtitle {
@@ -74,12 +75,12 @@ justify-content: center;
   justify-content: center;
   gap: 20px;
   margin: 20px 0;
-  flex-wrap: wrap; /* Permite que os cards se ajustem em telas pequenas */
+  flex-wrap: wrap;
 }
 
 .contact-card {
-  flex: 1 1 45%; /* Define uma largura flexível de 45% */
-  min-width: 250px; /* Garante que os cards não fiquem menores que 250px */
+  flex: 1 1 45%;
+  min-width: 250px;
   margin: 10px;
   border-radius: 12px;
   background-color: #fff;
@@ -122,13 +123,16 @@ justify-content: center;
 
 @media (max-width: 600px) {
   .contact-container {
-    flex-direction: column; /* Coloca os cards um abaixo do outro em telas pequenas */
+    flex-direction: column;
     gap: 10px;
   }
 
   .contact-card {
-    flex-basis: 100%; /* Ocupa toda a largura da tela */
-    min-width: 100%; /* Garante que os cards tenham a mesma largura */
+    flex-basis: 100%;
+    min-width: 100%;
   }
 }
 
+.text2 {
+  text-align: justify !important;
+}
