--- a/src/app/pages/teachers/teachers.component.scss
+++ b/src/app/pages/teachers/teachers.component.scss
@@ -17,11 +17,10 @@ mat-card-content {
 }
 
 mat-expansion-panel-header {
-  background-color:#b4c0ff;
-  ;
+  background-color: #b4c0ff;
   gap: 10px;
+  padding: 18px 24px !important;
 }
-
 
 mat-panel-title {
   font-weight: bold;
@@ -29,4 +28,42 @@ mat-panel-title {
 
 mat-panel-description {
   color: rgba(0, 0, 0, .87);
+}
+
+/* Responsividade */
+@media (max-width: 768px) {
+  /* Ajusta o padding da .content em telas menores */
+  .content {
+    padding: 8px;
+  }
+
+  /* Centraliza os itens e ajusta o espaçamento em telas pequenas */
+  .container {
+    margin-top: 8px;
+    padding: 8px;
+  }
+
+  /* Reduz o tamanho da fonte e margens dos cards */
+  mat-card-content {
+    font-size: 13px;
+  }
+
+  mat-card {
+    margin-bottom: 12px;
+  }
+
+  /* Ajusta o espaçamento e layout do cabeçalho dos painéis em telas pequenas */
+  mat-expansion-panel-header {
+    gap: 5px;
+    flex-wrap: wrap; /* Faz com que os itens do header quebrem linha se necessário */
+  }
+
+  mat-panel-title {
+    font-size: 16px;
+  }
+
+  mat-panel-description {
+    font-size: 12px;
+    color: rgba(0, 0, 0, .7);
+  }
 }
