--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -81,7 +81,7 @@ justify-content: center;
 .contact-card {
   flex: 1 1 45%;
   min-width: 250px;
-  margin: 10px;
+  margin: 0px;
   border-radius: 12px;
   background-color: #fff;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -121,6 +121,7 @@ justify-content: center;
   color: #666;
 }
 
+
 @media (max-width: 600px) {
   .contact-container {
     flex-direction: column;
@@ -131,8 +132,15 @@ justify-content: center;
     flex-basis: 100%;
     min-width: 100%;
   }
+
+  .contact-content {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .contact-card img {
+    margin-bottom: 10px;
+  }
 }
 
-.text2 {
-  text-align: justify !important;
-}
+
