--- a/src/app/pages/students/students.component.scss
+++ b/src/app/pages/students/students.component.scss
@@ -1,4 +1,3 @@
-
 .content {
   padding: 16px;
   background-color: white;
@@ -10,15 +9,13 @@
   justify-content: center;
 }
 
-
 .academic-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); /* Alteração para 250px */
   gap: 24px;
   max-width: 1200px;
   margin: 0 auto;
 }
-
 
 .academic-card {
   border-radius: 8px;
@@ -33,7 +30,6 @@
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
 }
 
-
 mat-card-header {
   background-color: #3f51b5;
   color: white;
@@ -42,18 +38,15 @@ mat-card-header {
   border-top-right-radius: 8px;
 }
 
-
 mat-card-title {
   font-size: 18px;
   font-weight: bold;
 }
 
-
 mat-card-subtitle {
   font-size: 14px;
   color: white;
 }
-
 
 mat-card-content p {
   margin: 8px 0;
@@ -61,7 +54,29 @@ mat-card-content p {
   line-height: 1.5;
 }
 
-
 mat-card {
   margin-bottom: 16px;
+}
+
+/* Responsividade */
+@media (max-width: 768px) {
+  .academic-grid {
+    grid-template-columns: 1fr; /* Coluna única em telas menores */
+  }
+
+  .academic-card {
+    margin: 0 auto; /* Centraliza o cartão */
+  }
+
+  mat-card-title {
+    font-size: 16px; /* Tamanho menor da fonte em dispositivos móveis */
+  }
+
+  mat-card-subtitle {
+    font-size: 12px;
+  }
+
+  mat-card-content p {
+    font-size: 14px; /* Ajuste da fonte para leitura mais fácil em celulares */
+  }
 }
