--- a/src/app/pages/users/my-conquests/my-conquests.component.scss
+++ b/src/app/pages/users/my-conquests/my-conquests.component.scss
@@ -1,21 +1,22 @@
-.achievements-card {
-  max-width: 900px;
-  margin: auto;
-  padding: 16px;
-  text-align: center !important;
-}
 
 
 .achievement-item {
   margin-bottom: 16px;
   background-color: #f9f9f9;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;  // Transição suave para transformação e sombra
+  border-radius: 8px;  // Adiciona bordas arredondadas para suavizar o efeito
+}
+
+.achievement-item:hover {
+  transform: translateY(-10px);
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.3);
 }
 
 
 mat-card-header {
   background-color: #1e3a8a;
   color: #fff;
-  padding: 21px 107px 0;
+  border-radius: 9px 9px 0px;
 }
 
 mat-card-title {
@@ -27,7 +28,22 @@ mat-icon {
   color: #ffeb3b !important;
 }
 
-.mat-mdc-card-content {
-  display: block;
-  padding: 15px 16px;
+
+.container-geral{
+  margin: 10px;
+}
+
+/* Responsividade adicional */
+@media (max-width: 600px) {
+  .achievement-item {
+    margin-bottom: 8px;
+  }
+
+  mat-card-header {
+    padding: 12px;
+  }
+
+  mat-card-title {
+    font-size: 1.1rem;
+  }
 }
