--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -2,15 +2,15 @@
   <app-toolbar-title title="Danilo de Oliveira Francisquete" icon='fa-user-tie'></app-toolbar-title>
 
   <nav class="tab-nav-bar">
-    <a mat-button [routerLink]="'/users/myProfile'" routerLinkActive="active-link">
+    <a mat-button [routerLink]="'/apresentacao/myProfile'" routerLinkActive="active-link">
       <mat-icon>person</mat-icon>
       Perfil
     </a>
-    <a mat-button [routerLink]="'/users/myDisplines'" routerLinkActive="active-link">
+    <a mat-button [routerLink]="'/apresentacao/myDisplines'" routerLinkActive="active-link">
       <mat-icon>play_lesson</mat-icon>
       Carta de Apresentação
     </a>
-    <a mat-button [routerLink]="'/users/myConquests'" routerLinkActive="active-link">
+    <a mat-button [routerLink]="'/apresentacao/myConquests'" routerLinkActive="active-link">
       <mat-icon>workspace_premium</mat-icon>
       Conquistas
     </a>
