--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,7 +31,7 @@
 
   <mat-sidenav-content>
     <mat-toolbar class="toolbar-submenu" color="primary">
-      <div class="toolbar-submenu-top">
+      <mat-toolbar-row class="toolbar-submenu-top">
         <button
       matTooltip="{{sidenav.opened ? 'Fechar menu' : 'Abrir menu'}}"
       matTooltipPosition="right"
@@ -39,18 +39,19 @@
       class="example-icon"
       (click)="sidenav.toggle()"
       >
-        <mat-icon>
+        <mat-icon class="iconx">
           {{sidenav.opened ? 'close' : 'menu'}}
         </mat-icon>
       </button>
-      </div>
+      </mat-toolbar-row>
 
-      <div class="toolbar-submenu-title">
-        <span *ngIf="!popText">{{menuName}}</span>
-      </div>
+      <mat-toolbar-row class="toolbar-submenu-title">
+        <span  *ngIf="!popText">{{menuName}}</span>
+      </mat-toolbar-row>
     </mat-toolbar>
 
       <router-outlet></router-outlet>
+
 
   </mat-sidenav-content>
 </mat-sidenav-container>
