--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,6 +8,12 @@ mat-sidenav-container {
   height: 100vh;
 }
 
+mat-toolbar-row {
+  padding: 0;
+}
+.iconx {
+  color: white !important;
+}
 
 .toolbar-submenu {
   height: 205px;
@@ -24,6 +30,7 @@ mat-sidenav-container {
   }
 
   &-title {
+    text-transform: capitalize;
    margin: 30px 20px;
   }
 
@@ -31,17 +38,13 @@ mat-sidenav-container {
 
 //-----sidebar------//
 
-.mat-icon {
-  color: #3f51b5 !important;
-}
-
 .mat-drawer-content {
   background-color: #efefef;
 }
 
 .sidenav {
   width: 250px;
-  margin-top: 64px; //top menu
+  margin-top: 64px;
 
   .mat-icon {
     margin: 10px 20px 0 0;
