--- a/src/app/pages/users/my-disciplines/my-disciplines.component.scss
+++ b/src/app/pages/users/my-disciplines/my-disciplines.component.scss
@@ -1,4 +1,3 @@
-/* cover-letter.component.css */
 .cover-card {
   max-width: 800px;
   margin: 20px auto;
@@ -13,7 +12,7 @@ mat-card-header {
 mat-card-title {
   font-size: 24px;
   font-weight: bold;
-  color: #1e3a8a; /* cor azul destacada */
+  color: #1e3a8a;
 }
 
 mat-card-subtitle {
@@ -38,42 +37,44 @@ button {
 
 @media (max-width: 768px) {
   .cover-card {
-    padding: 15px; /* Reduz o padding em telas menores */
-    max-width: 90%; /* Ajusta a largura máxima para telas menores */
+    padding: 15px;
+    max-width: 90%;
   }
 
   mat-card-title {
-    font-size: 22px; /* Reduz o tamanho da fonte do título */
+    font-size: 22px;
   }
 
   mat-card-content p {
-    font-size: 15px; /* Reduz o tamanho da fonte do conteúdo */
+    font-size: 15px;
   }
 
   mat-card-actions {
-    flex-direction: column; /* Empilha os botões verticalmente em telas menores */
-    align-items: stretch; /* Faz os botões ocuparem toda a largura disponível */
+    flex-direction: column;
+    align-items: stretch;
+    gap: 8px;
   }
 
   button {
-    width: 100%; /* Botões ocupam 100% da largura */
+    width: 100%;
+
   }
 }
 
 @media (max-width: 480px) {
   .cover-card {
-    padding: 10px; /* Diminui ainda mais o padding em telas muito pequenas */
+    padding: 10px;
   }
 
   mat-card-title {
-    font-size: 20px; /* Reduz o tamanho da fonte do título em telas muito pequenas */
+    font-size: 20px;
   }
 
   mat-card-content p {
-    font-size: 14px; /* Reduz ainda mais o tamanho da fonte do conteúdo */
+    font-size: 14px;
   }
 
   mat-card-actions {
-    gap: 8px; /* Ajusta o espaçamento entre botões para telas muito pequenas */
+    gap: 8px;
   }
 }
