--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
   >
   <mat-toolbar >
     <img class="avatar mat-elevation-z4 "src="../assets/perfil.jpg" alt="avatar">
-    <a routerLink="/users" class="name">Danilo Francisquete</a>
+    <a routerLink="/apresentacao" class="name">Danilo Francisquete</a>
     <p class="designation">Desenvolvedor Full-stack</p>
   </mat-toolbar>
 <mat-divider></mat-divider>
