--- a/src/app/shared/components/toolbar-menu/toolbar-menu.component.html
+++ b/src/app/shared/components/toolbar-menu/toolbar-menu.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar class="toolbar-menu"[class.mat-elevation-z4]="shadow">
   <mat-toolbar-row>
-    <a href="/dashboard" mat-button class="logo">
+    <a href="/painel" mat-button class="logo">
     <mat-icon  fontSet="fa" fontIcon="fa-school"></mat-icon>
     <span class="title" *ngIf="!popText">Portfólio</span>
     <span class="title" *ngIf="popText">Portfólio - {{menuTitle}}</span>
