--- a/src/app/pages/support/support.component.html
+++ b/src/app/pages/support/support.component.html
@@ -82,6 +82,44 @@
       </mat-card>
     </div>
 
+    <div fxFlex="25" fxFlex.xs="100" fxFlex.sm="50" fxFlex.md="25" fxFlex.lg="30">
+      <mat-card class="contact-item">
+        <a class="contact-link" href="https://www.figma.com/design/qKiiWsqhXKGdVGU3HGQGlY/Projeto-Vendas" target="_blank">
+          <mat-card-subtitle class="subtitle">Projeto Vendas</mat-card-subtitle>
+          <mat-card-content>
+            <img src="assets/vendas.png" alt="devcontrole" class="card-image">
+            <mat-card-title class="title"> Layout no Figma</mat-card-title>
+          </mat-card-content>
+        </a>
+      </mat-card>
+    </div>
+
+    <div fxFlex="25" fxFlex.xs="100" fxFlex.sm="50" fxFlex.md="25" fxFlex.lg="30">
+      <mat-card class="contact-item">
+        <a class="contact-link" href="https://www.figma.com/design/IUsPBNKBWpGpJUCf2D5WO2/Redesign-Netflix?node-id=0-1&node-type=canvas" target="_blank">
+          <mat-card-subtitle class="subtitle">Redesign Netflix</mat-card-subtitle>
+          <mat-card-content>
+            <img src="assets/netflix.png" alt="devcontrole" class="card-image">
+            <mat-card-title class="title"> Layout no Figma</mat-card-title>
+          </mat-card-content>
+        </a>
+      </mat-card>
+    </div>
+
+    <div fxFlex="25" fxFlex.xs="100" fxFlex.sm="50" fxFlex.md="25" fxFlex.lg="30">
+      <mat-card class="contact-item">
+        <a class="contact-link" href="https://www.figma.com/design/7hjEXQUpeVJ1ZIHCi3phvs/Cardapio?node-id=0-1&node-type=canvas" target="_blank">
+          <mat-card-subtitle class="subtitle">Cardápio - Design de Interfacex</mat-card-subtitle>
+          <mat-card-content>
+            <img src="assets/burguer.png" alt="devcontrole" class="card-image">
+            <mat-card-title class="title"> Layout no Figma</mat-card-title>
+          </mat-card-content>
+        </a>
+      </mat-card>
+    </div>
+
+
+
   </div>
 
   <div fxLayout="row" fxLayoutAlign="center">
