--- a/src/app/pages/teachers/teachers.component.html
+++ b/src/app/pages/teachers/teachers.component.html
@@ -10,7 +10,7 @@
             Desenvolvedor de Software
           </mat-panel-title>
           <mat-panel-description>
-            Code Express · Abr de 2023 - o momento
+            Code Express · Abr de 2023 - Set de 2024
           </mat-panel-description>
         </mat-expansion-panel-header>
         <mat-card>
